# ramsey_he

./: .clang-format  CMakeLists.txt  README.md  benchmark
src/: definitions.h  functions.cpp  functions.h  main.cpp  nelder-mead.h  nelder_mead.h  polarization_main.cpp  random.cpp  random.h  stateP_main.cpp  stateS_main.cpp
tests/: nelder_mead.cpp
